--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,19 +1,27 @@
 <h1>New group</h1>
 
 <% form_for(@group) do |f| %>
+
   <%= f.error_messages %>
 
+  <%- if @group.parent_id -%>
+  <%= f.hidden_field :parent_id %>
+  <%- else -%>
   <p>
     <%= f.label :parent_id %><br />
     <%= f.text_field :parent_id %>
   </p>
+  <%- end -%>
+
   <p>
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </p>
+
   <p>
     <%= f.submit "Create" %>
   </p>
+
 <% end %>
 
 <%= link_to 'Back', groups_path %>
