setup better connections between people and groups

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -22,6 +22,8 @@
 
 <%- if @group -%>
   <%= link_to 'New group', new_group_group_path(@group) %>
+<%- elsif @person -%>
+  <%= link_to 'New group', new_person_group_path(@person) %>
 <%- else -%>
   <%= link_to 'New group', new_group_path %>
 <%- end -%>
