--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,12 +1,10 @@
 <h1>New group</h1>
 
-<% form_for(@group) do |f| %>
+<% form_for(@form_models) do |f| %>
 
   <%= f.error_messages %>
 
-  <%- if @group.parent_id -%>
-  <%= f.hidden_field :parent_id %>
-  <%- else -%>
+  <%- unless @group.parent_id -%>
   <p>
     <%= f.label :parent_id %><br />
     <%= f.text_field :parent_id %>
