--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -17,4 +17,8 @@
 
 <br />
 
-<%= link_to 'New person', new_person_path %>
+<%- if @group -%>
+  <%= link_to 'New person', new_group_person_path(@group) %>
+<%- else -%>
+  <%= link_to 'New person', new_person_path %>
+<%- end -%>
