--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -12,6 +12,7 @@
     <td><%=h group.name %></td>
     <td><%= link_to 'Show', group %></td>
     <td><%= link_to 'Groups', group_groups_path(group) %></td>
+    <td><%= link_to 'People', group_people_path(group) %></td>
     <td><%= link_to 'Edit', edit_group_path(group) %></td>
     <td><%= link_to 'Destroy', group, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
