--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -9,6 +9,7 @@
   <tr>
     <td><%=h person.name %></td>
     <td><%= link_to 'Show', person %></td>
+    <td><%= link_to 'Groups', person_groups_path(person) %></td>
     <td><%= link_to 'Edit', edit_person_path(person) %></td>
     <td><%= link_to 'Destroy', person, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
